# pyflubl

./: .gitignore  README.md  TODO.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
docker/: Dockerfile-u22
docs/source/: api.rst  authorship.rst  conf.py  index.rst  installation.rst  licence.rst
examples/: .gitignore  01_Analysis.ipynb
src/fluka/4-3.0/: CMakeLists.txt  build.py  build.sh  magfld.f  mgdraw.f
src/fluka/4-3.0/include/: fpe.h
src/fluka/4-3.0/src/: Makefile  bdsim.cxx  magfldBdsim.cxx  mgdraw.f  mgdrawBdsim.cxx  source.f  sourceBdsim.cxx  source_newgen.f  usrini.f  usrini_c.cxx  usrout.f
src/pyflubl/: Beam.py  Builder.py  BuilderNew.py  Coordinates.py  Defaults.py  Element.py  Field.py  FlukaMachine.py  GeometryGeant4.py  Options.py  Run.py  Usr.py  Utilities.py  __init__.py
src/pyflubl/Analysis/: _FlukaDataFile.py  _PostProcessing.py  _PyflublDataFile.py  __init__.py  _fortran.py  _open.py  _plot.py  _usbsuw.py  _usrbdx.py  _usrbin.py  _usrdump.py
src/pyflubl/Convert/: __init__.py  bdsim.py  madx.py
src/pyflubl/Fluka/: Run.py  ScorerBoundary.py  ScorerMesh.py  _BaseCard.py  __init__.py  _beam.py  _defaults.py  _elc.py  _global.py  _mgn.py  _mgncreat.py  _mgnfield.py  _randomiz.py  _rotprbin.py  _source.py  _start.py  _title.py  _userdump.py  _usrbdx.py  _usrbin.py  _usricall.py  _usrocall.py  _usrtrack.py
src/pyflubl/convert/: __init__.py  baseConverter.py  bdsim.py  mad8.py  madx.py
test/: Makefile
test/bdsim/: 01_drift.gmad  02_rbend.gmad  03_sbend.gmad  04_quad.gmad
test/pyflubl/: DebugPlots.ipynb  IPAC_2025.ipynb  IPAC_2025.py  Makefile  test_IPAC_2025.py  test_IPAC_2026.py  test_T001_Drift.py  test_T002_Drift_Cut.py  test_T002_RBend.py  test_T003_SBend.py  test_T004_Quad.py  test_T004_RBend.py  test_T005_SBend.py  test_T005_Sextu.py  test_T006_Octu.py  test_T006_Quad.py  test_T007_Deca.py  test_T017_Target.py  test_T018_RCol.py  test_T019_ECol.py  test_T020_JCol.py  test_T023_Shield.py  test_T024_Dump.py  test_T024_Shield.py  test_T025_Dump.py  test_T026_Gap.py  test_T026_Wirescanner.py  test_T027_Wirescanner.py  test_T029_Gap.py  test_T032_Custom.py  test_T032_Custom_Fluka.flair  test_T032_Custom_Fluka.inp  test_T035_Element.py  test_T050_Beam.py  test_T050_Sampler.py  test_T050_Title.py  test_T051_Global.py  test_T051_Lattice.py  test_T100_Ring.py  test_T100_Straight.py  (+14 more)
test/pyflubl/geometryInput/: test_T032_Custom_Pyg4.gdml  test_T032_Custom_Pyg4.py
test/pyflubl/run_IPAC_2026/: Debug_IPAC_2026.ipynb  IPAC_2026.gmad
test/pyflubl/run_IPAC_2026_magnetic/: Debug_IPAC_2026_magnetic.ipynb
test/pyflubl/run_T001_Drift/: Debug_T001_Drift.ipynb
test/pyg4/: test_T001_CubicalOuter_CylinderBP.py  test_T100_Extrusion.py  test_T101_Extruder.py  test_T102_ExtruderAngle.py
(+47 files in other folders)
